5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4153/executions/1638_2731.log
== TEST (2019-04-15 13:43:26) 
-- CODE:
from math import*
a = float(input("juhgfbjfds: "))
b = float(input("jhfduisvb: "))
r = float(input("hgfyucf: "))

r = sqrt((x - a)**2 + (y - b)**2)

if(b > 0):
	msg = "Superiores"
	print(msg)
else:
	msg = "Inferiores"
	print(msg)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    r = sqrt((x - a)**2 + (y - b)**2)
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:43:30) 
-- CODE:
from math import*
a = float(input("juhgfbjfds: "))
b = float(input("jhfduisvb: "))
r = float(input("hgfyucf: "))

r = sqrt((x - a)**2 + (y - b)**2)

if(b > 0):
	msg = "Superiores"
	print(msg)
else:
	msg = "Inferiores"
	print(msg)
-- EXECUTION TIME:
0.141328
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1638/2731/main.py", line 6, in <module>
    r = sqrt((x - a)**2 + (y - b)**2)
NameError: name 'x' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:43:32) 
-- CODE:
from math import*
a = float(input("juhgfbjfds: "))
b = float(input("jhfduisvb: "))
r = float(input("hgfyucf: "))

r = sqrt((x - a)**2 + (y - b)**2)

if(b > 0):
	msg = "Superiores"
	print(msg)
else:
	msg = "Inferiores"
	print(msg)
-- EXECUTION TIME:
0.155082
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1638/2731/main.py", line 6, in <module>
    r = sqrt((x - a)**2 + (y - b)**2)
NameError: name 'x' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:43:51) 
-- CODE:
from math import*
a = float(input("juhgfbjfds: "))
b = float(input("jhfduisvb: "))
r = float(input("hgfyucf: "))

r = sqrt((x - a)**2 + (y - b)**2)

if(b > 0):
	msg = "Superiores"
	print(msg)
else:
	msg = "Inferiores"
	print(msg)
-- EXECUTION TIME:
0.148054
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1638/2731/main.py", line 6, in <module>
    r = sqrt((x - a)**2 + (y - b)**2)
NameError: name 'x' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:49:04) 
-- CODE:
from math import*
a = float(input("juhgfbjfds: "))
b = float(input("jhfduisvb: "))
r = float(input("hgfyucf: "))
x =1
y=1
r = sqrt((x - a)**2 + (y - b)**2)

if(b > 0):
	msg = "Superiores"
	print(msg)
else:
	msg = "Inferiores"
	print(msg)
-- EXECUTION TIME:
0.223723
-- TEST CASE 1:
---- input:
4.5
-2.2
3
---- correct output:
Inferiores
---- user output:
Inferiores
-- TEST CASE 2:
---- input:
0.1
0.1
3
---- correct output:
Superiores
---- user output:
Superiores
-- TEST CASE 3:
---- input:
-4.5
2.2
1
---- correct output:
Superiores
---- user output:
Superiores
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
